[gd_scene load_steps=19 format=2]

[ext_resource path="res://src/prefabs/UIs/MainMenu/MainMenu.gd" type="Script" id=1]
[ext_resource path="res://src/prefabs/UIs/Console/debug_interface.tscn" type="PackedScene" id=2]
[ext_resource path="res://assets/textures/backgrounds/menu_pattern_2.png" type="Texture" id=3]
[ext_resource path="res://src/prefabs/UIs/Options/Options.tscn" type="PackedScene" id=4]
[ext_resource path="res://assets/shaders/background_shader.tres" type="Shader" id=5]
[ext_resource path="res://assets/shaders/blur.gdshader" type="Shader" id=6]
[ext_resource path="res://assets/sprites/animated_particles/smal_animated_star.tres" type="Texture" id=8]
[ext_resource path="res://assets/themes/icon.png" type="Texture" id=9]
[ext_resource path="res://src/prefabs/UIs/MainMenu/Panel/MainMenuPanel.tscn" type="PackedScene" id=10]

[sub_resource type="ShaderMaterial" id=12]
shader = ExtResource( 5 )
shader_param/factor = Vector2( 16, 8 )
shader_param/ratio = 1.335
shader_param/wubble = 0.05

[sub_resource type="ShaderMaterial" id=13]
shader = ExtResource( 6 )
shader_param/amount = 0.75

[sub_resource type="Curve" id=5]
min_value = -360.0
max_value = 360.0
_data = [ Vector2( 0, 1 ), 0.0, 0.0, 0, 0, Vector2( 0.151515, -108.818 ), 0.0, 0.0, 0, 0, Vector2( 0.367965, 120.273 ), 0.0, 0.0, 0, 0, Vector2( 0.627706, -49.9091 ), 1628.31, 1628.31, 0, 0, Vector2( 1, 1 ), 0.0, 0.0, 0, 0 ]

[sub_resource type="Curve" id=6]
_data = [ Vector2( 0, 0.0136364 ), 0.0, 0.0, 0, 0, Vector2( 1, 0.9875 ), 3.24546, 0.0, 0, 0 ]

[sub_resource type="Gradient" id=7]
offsets = PoolRealArray( 0, 0.100962, 0.375, 0.538462, 0.658654, 1 )
colors = PoolColorArray( 1, 1, 1, 0, 0.519531, 0.894428, 1, 1, 0.519531, 1, 0.943695, 1, 0.289063, 0.383484, 1, 1, 0.35713, 0.347357, 0.936035, 1, 1, 1, 1, 0 )

[sub_resource type="Animation" id=8]
resource_name = "Init"
length = 1.5
tracks/0/type = "value"
tracks/0/path = NodePath("CanvasLayer/Buttons:rect_position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1.5 ),
"transitions": PoolRealArray( 0.5, 2 ),
"update": 0,
"values": [ Vector2( -100, 10 ), Vector2( 10, 10 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("CanvasLayer/Buttons:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.5, 1.5 ),
"transitions": PoolRealArray( 1, 0.5, 2 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("CanvasLayer/TempIcon:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.5, 1.5 ),
"transitions": PoolRealArray( 1, 2, 0.5 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="Animation" id=9]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("CanvasLayer/Saves:rect_size")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 630, 190 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("CanvasLayer/Saves:rect_position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 5, 370 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("CanvasLayer/Buttons:rect_position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( -100, 10 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("CanvasLayer/Buttons:modulate")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ) ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("CanvasLayer/TempIcon:modulate")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ) ]
}

[sub_resource type="Animation" id=10]
resource_name = "ShowOptions"
tracks/0/type = "value"
tracks/0/path = NodePath("CanvasLayer/Buttons:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.7 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("CanvasLayer/Buttons:rect_position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.7 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 10, 10 ), Vector2( -100, 10 ) ]
}

[sub_resource type="Animation" id=11]
resource_name = "ShowSaveSlots"
length = 2.4
tracks/0/type = "value"
tracks/0/path = NodePath("CanvasLayer/Saves:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1.5, 2.3 ),
"transitions": PoolRealArray( 1, 2, 2 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("CanvasLayer/Saves:rect_position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 1.3, 2.4 ),
"transitions": PoolRealArray( 1, 2, 0.5 ),
"update": 0,
"values": [ Vector2( 5, 370 ), Vector2( 5, 370 ), Vector2( 5, 170 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("CanvasLayer/Buttons:rect_position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 2, 0.5 ),
"update": 0,
"values": [ Vector2( 10, 10 ), Vector2( -100, 10 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("CanvasLayer/Buttons:modulate")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 0.5, 2 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}

[node name="MainMenu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="Background" type="Sprite" parent="."]
material = SubResource( 12 )
scale = Vector2( 10, 5.625 )
texture = ExtResource( 3 )
centered = false

[node name="ColorRect" type="ColorRect" parent="Background"]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 0.392157 )

[node name="Blur" type="ColorRect" parent="Background"]
material = SubResource( 13 )
anchor_right = 1.0
anchor_bottom = 1.0

[node name="CPUParticles2D" type="CPUParticles2D" parent="."]
modulate = Color( 0.8, 1, 1.9, 1 )
position = Vector2( 300, 169 )
amount = 600
lifetime = 5.0
lifetime_randomness = 1.0
texture = ExtResource( 8 )
emission_shape = 2
emission_rect_extents = Vector2( 400, 300 )
direction = Vector2( 1, 7 )
spread = 10.0
gravity = Vector2( -8, -7 )
initial_velocity = 10.0
initial_velocity_random = 0.35
angular_velocity = 45.0
angular_velocity_random = 1.0
angular_velocity_curve = SubResource( 5 )
linear_accel = 7.0
linear_accel_random = 0.4
radial_accel = 8.0
radial_accel_random = 1.0
tangential_accel = 1.0
tangential_accel_random = 0.1
damping = 5.0
damping_random = 1.0
angle = 40.0
angle_random = 1.0
scale_amount = 0.8
scale_amount_random = 0.4
scale_amount_curve = SubResource( 6 )
color_ramp = SubResource( 7 )

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="TempIcon" type="TextureRect" parent="CanvasLayer"]
modulate = Color( 1, 1, 1, 0 )
margin_left = 20.0
margin_top = 20.0
margin_right = 199.0
margin_bottom = 199.0
texture = ExtResource( 9 )

[node name="Buttons" type="VBoxContainer" parent="CanvasLayer"]
anchor_bottom = 1.0
margin_left = -100.0
margin_top = 10.0
margin_bottom = -10.0
alignment = 2

[node name="Play" type="Button" parent="CanvasLayer/Buttons"]
margin_top = 282.0
margin_right = 100.0
margin_bottom = 296.0
text = "Play"
align = 0

[node name="Options" type="Button" parent="CanvasLayer/Buttons"]
margin_top = 304.0
margin_right = 100.0
margin_bottom = 318.0
text = "Options"
align = 0

[node name="Quit" type="Button" parent="CanvasLayer/Buttons"]
margin_top = 326.0
margin_right = 100.0
margin_bottom = 340.0
text = "Quit"
align = 0

[node name="Saves" type="MarginContainer" parent="CanvasLayer"]
modulate = Color( 1, 1, 1, 0 )
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 5.0
margin_top = 10.0
margin_right = -5.0
margin_bottom = 200.0

[node name="H" type="HBoxContainer" parent="CanvasLayer/Saves"]
margin_right = 630.0
margin_bottom = 190.0
rect_min_size = Vector2( 630, 190 )
size_flags_vertical = 4
custom_constants/separation = 4

[node name="NewGame" parent="CanvasLayer/Saves/H" instance=ExtResource( 10 )]
margin_right = 126.0
margin_bottom = 190.0

[node name="Container" parent="CanvasLayer/Saves/H/NewGame" index="0"]
margin_bottom = -7.0

[node name="SlotName" parent="CanvasLayer/Saves/H/NewGame/Container/V" index="0"]
text = "New Game"

[node name="Data" parent="CanvasLayer/Saves/H/NewGame/Container/V" index="2"]
margin_bottom = 126.0
text = "Start a new journey"

[node name="Scroll" type="ScrollContainer" parent="CanvasLayer/Saves/H"]
margin_left = 130.0
margin_right = 630.0
margin_bottom = 190.0
rect_min_size = Vector2( 500, 190 )
follow_focus = true
scroll_vertical_enabled = false

[node name="SavePanels" type="HBoxContainer" parent="CanvasLayer/Saves/H/Scroll"]
unique_name_in_owner = true
margin_top = 95.0
margin_bottom = 95.0
size_flags_vertical = 6

[node name="AnimationPlayer" type="AnimationPlayer" parent="CanvasLayer"]
root_node = NodePath("../..")
anims/Init = SubResource( 8 )
anims/RESET = SubResource( 9 )
anims/ShowOptions = SubResource( 10 )
anims/ShowSaveSlots = SubResource( 11 )

[node name="debug" parent="CanvasLayer" instance=ExtResource( 2 )]

[node name="Options" parent="CanvasLayer" instance=ExtResource( 4 )]

[node name="Version" type="Label" parent="CanvasLayer"]
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 10.0
margin_top = -18.0
margin_right = -10.0
margin_bottom = -10.0
text = "Version: %s"
align = 2

[connection signal="pressed" from="CanvasLayer/Buttons/Play" to="." method="_on_Play_pressed"]
[connection signal="pressed" from="CanvasLayer/Buttons/Options" to="." method="_on_Options_pressed"]
[connection signal="pressed" from="CanvasLayer/Buttons/Quit" to="." method="_on_Quit_pressed"]

[editable path="CanvasLayer/Saves/H/NewGame"]
